@@ -4,10 +4,14 @@
 	the JPEG TIFF as is is not required in order to prevent it from 
 	being unused and filled with invalid data.  (Leave it to be 
 	generated by later activity.)
+	http://bugzilla.maptools.org/show_bug.cgi?id=2135
 	* tools/tiff2pdf.c: Write the JPEG SOI headers into the TIFF strip 
 	data rather than skipping them.  This fixes the ability to view in
 	Acrobat Reader, Evince, and Ghostscript.
 	http://bugzilla.maptools.org/show_bug.cgi?id=2135
+	* libtiff/tif_fax3.c: Don't return error on badly-terminated MMR
+	strips.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2029
 
 2010-01-06  Frank Warmerdam  <warmerdam@pobox.com>
 
